--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Copy to .env and fill values
-OPENAI_API_KEY=
-BOT_DB_URL=postgresql://postgres:password@your-bot-host:port/railway
-BUSINESS_DB_URL=postgresql://postgres:password@your-business-host:port/railway
-PORT=3000
+OPENAI_API_KEY=""
+PORT="3000"
+# Railway internal URLs o externos con SSL
+BOT_DB_URL="postgresql://postgres:password@postgres-bot.internal:5432/railway"
+BUSINESS_DB_URL="postgresql://postgres:password@postgres-business.internal:5432/railway"
