--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "agri-bot-rules-full",
+  "name": "dual-mode-bot",
   "version": "1.0.0",
-  "description": "Bot with advanced business rules engine and CRUD UI (sales vs reservations)",
+  "description": "Bot con dos modos (ventas y reservas) con NLU acotado y grounding en DB",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "init:db": "node dbInit.js",
+    "rules:restore": "curl -X POST http://localhost:${PORT:-3000}/api/rules/restore-defaults"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "pg": "^8.11.0",
-    "dotenv": "^16.3.1",
-    "body-parser": "^1.20.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "luxon": "^3.5.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.4"
   }
 }
