--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "dual-mode-bot",
-  "version": "1.0.0",
-  "description": "Bot con dos modos (ventas y reservas) con NLU acotado y grounding en DB",
+  "name": "assistant-bot-prod",
+  "version": "2.0.0",
+  "description": "Bot multi-tenant (ventas/reservas) con NLU acotado, fallbacks semánticos y grounding en DB",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init:db": "node dbInit.js",
-    "rules:restore": "curl -X POST http://localhost:${PORT:-3000}/api/rules/restore-defaults"
+    "rules:restore": "curl -s -X POST http://localhost:${PORT:-3000}/api/rules/restore-defaults"
   },
   "dependencies": {
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "luxon": "^3.5.0",
-    "pg": "^8.12.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
